--- a/pom.xml
+++ b/pom.xml
@@ -471,6 +471,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-test</artifactId>
+		    <scope>test</scope>
+		</dependency>		
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
