--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
         </repository>
         <repository>
             <id>clojars.org</id>
-            <url>http://clojars.org/repo</url>
+            <url>https://clojars.org/repo</url>
         </repository>
     	<repository>
             <id>alfresco.com</id>
